# jewgo-app

./: .codex_js_errors.json  .codex_js_files.txt  .codex_json_files.txt  .codex_py_files.txt  .codex_sh_files.txt  .env.development  .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  ADD_EATERY_FUNCTIONALITY_TEST_REPORT.md  ADMIN_SETUP_GUIDE.md  AGENTS.md  AUTH_VERIFICATION_REPORT.md  BACKEND_URL_MIGRATION_COMPLETE.md  BUILD_AND_DEPLOY_QUICK_REFERENCE.md  BUILD_AND_DEPLOY_SYSTEM_SUMMARY.md  CHANGELOG.md  CI_PIPELINE_TEST.md  CLAUDE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CLOUD_DEPLOYMENT_GUIDE.md  CLOUD_INFRASTRUCTURE_SUMMARY.md  CODEBASE_CLEANUP_SUMMARY.md  DEBUG_REGISTRATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_IMPROVEMENTS_SUMMARY.md  DOCKER_DEV_WORKFLOW.md  DOCKER_FRONTEND_SETUP.md  DOCKER_FULL_SETUP.md  DOCKER_HUB_ENV_QUICK_REFERENCE.md  DOCKER_HUB_QUICK_REFERENCE.md  DOCKER_SETUP.md  DOCKER_SETUP_SUMMARY.md  DUPLICATE_CODE_ANALYSIS.md  DUPLICATE_CODE_CLEANUP_SUMMARY.md  EATERY_API_CALL_OPTIMIZATION_SUMMARY.md  ENVIRONMENT.md  FINAL_MIGRATION_SUMMARY.md  (+134 more)
backend/: .dockerignore  .req-dev-no-pytest.txt  CI_READINESS_REPORT.md  DATABASE_CONSOLIDATION_SUMMARY.md  DATABASE_FIX_SUMMARY.md  Dockerfile  Dockerfile.multistage  Dockerfile.optimized  Dockerfile.production  Dockerfile.webhook  README.md  VERIFICATION_COMMENTS_IMPLEMENTATION.md  __init__.py  add_categories.py  add_comprehensive_marketplace_data.py  add_marketplace_sample_data.py  add_mikvah_sample_data.py  add_mock_marketplace_simple.py  add_sample_data.py  admin_input.txt  app.py  app_factory.py  app_factory.py.backup  app_factory_full.py  app_factory_full.py.backup  app_factory_full_backup.py  app_factory_minimal.py  app_factory_security_enhanced.py  app_simple.py  build.sh  check_column_differences.py  check_db_schema.py  check_marketplace_db.py  check_marketplace_tables.py  check_neon_data.py  check_table_structure.py  config.env  coverage.xml  create_order_tables.py  create_sample_data.py  (+80 more)
backend/cache/: advanced_cache_manager.py  api_response_cache.py  etag_cache.py  rate_limit_cache.py  redis_cluster_manager.py  redis_manager_v5.py
backend/config/: abuse_config.py  auth_security_config.py  config.py  gunicorn.conf.py  marketplace_config.py  redis_cluster.conf  security_config.py  sentinel.conf  settings.py
backend/database/: auth_models.py  auth_models_v2.py  base_repository.py  connection_manager.py  connection_manager_consolidated.py  connection_manager_v5.py  consolidated_config.py  consolidated_db_manager.py  database_manager_v3.py  database_manager_v4.py  database_manager_v5.py  enhanced_connection_pool.py  enhanced_health_service.py  google_places_manager.py  init_database.py  migrate_to_consolidated.py  models.py  optimized_database_manager.py  performance_indexes.sql  postgis_indexes.sql  query_optimizer.py  search_manager.py  service_integration.py  setup_api_database.py  setup_database.py  setup_neon.py  specials_models.py  unified_connection_manager.py
backend/deployment/: Procfile
backend/docs/: API_SECURITY.md  AUTH_IMPROVEMENTS_SUMMARY.md  JWT_KEY_ROTATION_RUNBOOK.md  SECURITY_CONFIGURATION.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_PROCEDURES.md  SERVICE_LAYER_ARCHITECTURE.md
backend/middleware/: auth_decorators.py  auth_middleware.py  auth_v5.py  cors_middleware.py  csrf_v5.py  error_handlers.py  idempotency_v5.py  metrics_middleware.py  observability_v5.py  rate_limit_v5.py  security_headers.py  security_headers_middleware.py  security_headers_v5.py  security_middleware.py
(+3181 files in other folders)
