[project]
name = "schema-drift-mcp"
version = "0.1.0"
description = "MCP server for detecting database schema drift between SQLAlchemy models and live Postgres"
requires-python = ">=3.11"
dependencies = [
  "mcp[server]>=1.13.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.1"
]

[project.scripts]
schema-drift-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
